Cleaned up requirements.txt, removed standard library & local imports

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
-app
-datetime
 flask
-glob
-googleapiclient.discovery
-googleapiclient.errors
-import
-isodate
-json
-logging
-main
-os
 pandas
-re
-tempfile
-time
-urllib.parse
-yt_scraper.api
-yt_scraper.exporter
-yt_scraper.utils
+isodate
+google-api-python-client
